# extractor-data-ohlcv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  blacklist.txt  config.py  docker-compose.yml  logger.py  main.py  main_cafef.ipynb  notifier.py  pyproject.toml  requirements.txt  schemas.py  storages.py  utils.py
config/: blacklist.txt
configs/: interested_tickers.txt
extractors/: __init__.py  extractor_cafef.py  extractor_vnstock.py
storages/: __init__.py  base.py  cloud.py  local.py
