[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extractor-data-ohlcv"
version = "1.0.0"
description = "Vietnam Stock OHLCV Data Extractor Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.20.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-bigquery-storage>=2.24.0",
    "db-dtypes>=1.1.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "pytz>=2024.1",
    "polars>=0.20.0",
    "pandera[polars]>=0.18.0",
    "vnstock>=4.0.4",
    "requests>=2.31.0",
    "holidays>=0.45",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.1.0"
]

[project.optional-dependencies]
local = [
    "SQLAlchemy>=2.0.31",
    "psycopg2-binary>=2.9.12"
]
